--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-
-
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -14,8 +12,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BeaconSDK"
         tools:targetApi="31">
-
-
+        <activity
+            android:name=".SelectDomainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".UuidListActivityActivity"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -25,9 +27,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".BeaconScanPermissionsActivity"
-            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".BeaconScanPermissionsActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
